--- a/metadata.yaml
+++ b/metadata.yaml
@@ -43,6 +43,7 @@ subjects:
 - !lcsh 'Fiction'
 - !lcsh 'Short stories'
 - !lcc 'PR'
+- GITenberg
 tableOfContents: 'The great idea -- From the highways and hedges -- Adventure of the
   first clients -- Adventure of the rich uncle -- Adventure of the office screen --
   A lover in cocky -- Adventure of the exemplary earl : The earl''s long-lost cousin
